# This file is part of the Avitab project. See the README and LICENSE for details.

add_subdirectory(include)
add_subdirectory(avitab)
add_subdirectory(charts)
add_subdirectory(gui_toolkit)
add_subdirectory(libimg)
add_subdirectory(libnavsql)
add_subdirectory(maps)
add_subdirectory(utils)
add_subdirectory(world)
add_subdirectory(hybrids_to_refactor)
